- add no internet related loader and blank screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   connectivity_plus: ^5.0.0
   cached_network_image: ^3.3.0
   flutter_svg:
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
